[tool.poetry]
name = "pyunicam"
version = "0.1.1"
description = "Pyunicam is a Python module to control (scientific) cameras using a universal Python interface"
authors = ["Piet J.M. Swinkels <36634689+WetenSchaap@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WetenSchaap/pyunicam"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2"
ipykernel = { version = "*", optional = true }
simple-pyspin = { version = "^0.1.1", optional = true }
matplotlib = { version = "^3.9.0", optional = true }

[tool.poetry.extras]
flir = ["simple-pyspin"]
test = ["ipykernel","matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
